recipes/recipes.css
* {
box-sizing: border-box;
}

body {
font-size: 20px;
max-width: 1280px;
margin: auto;
padding: 1em;
}

img {
max-width: 20%;
}

.main-nav {
list-style-type: none;
display: flex;
gap: 1em;
/*If you want the menu in a column:*/
flex-direction: column;
}

.recipe-card {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    justify-content: center;
}

.gallery > * {
    flex: 1 1 460px;
}

hr{
margin-top: 50px;
}

@media screen and (min-width: 550px) {
    .recipe-nav {
        flex-direction: row;
        justify-content: flex-end;
    }
    .recipe-card {
        flex-direction: row;
    }
    .recipe-card-image {
        flex: 0 1 250px;
    }
    .recipe-card-content {
        flex: 0 1 60ch;
    }
}


/* form-demo.css */
body {
  font-size: 1.2em;
}
form {
  width: 50%;
  margin: 0 auto;
}
h1, h2 {
  text-align: center;
}
label {
    display: block;
    margin-bottom: 8px;
  }
  
  input,
  select,
  textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    box-sizing: border-box;
    border: 1px solid #ccc; /* Add a border to make it visually consistent */
    border-radius: 4px;
  }
  button {
    background-color: #4caf50;
    color: white;
    padding: 10px 15px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  .errors {
    white-space: pre-line; /*needed for 2 errors to be on separate lines*/
    color: red;
  }
  .hide {
    display: none;
  }

/* form-demo.css */
body {
  font-size: 1.2em;
}
form {
  width: 50%;
  margin: 0 auto;
}
h1, h2 {
  text-align: center;
}
label {
    display: block;
    margin-bottom: 8px;
  }
  
  input,
  select,
  textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 10px;
    box-sizing: border-box;
    border: 1px solid #ccc; /* Add a border to make it visually consistent */
    border-radius: 4px;
  }
  button {
    background-color: #4caf50;
    color: white;
    padding: 10px 15px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  .errors {
    white-space: pre-line; /*needed for 2 errors to be on separate lines*/
    color: red;
  }
  .hide {
    display: none;
  }
          

